--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -17,10 +17,15 @@
         "tsConfig": "apps/frontend/tsconfig.app.json",
         "assets": ["apps/frontend/src/favicon.ico", "apps/frontend/src/assets"],
         "styles": [
-          "apps/frontend/src/app/shared/css/styles.css",
+          "node_modules/slick-carousel/slick/slick.scss",
+          "node_modules/slick-carousel/slick/slick-theme.scss",
+          "apps/frontend/src/app/shared/styles.css",
           "apps/frontend/styles.css"
         ],
-        "scripts": []
+        "scripts": [
+          "node_modules/jquery/dist/jquery.min.js",
+          "node_modules/slick-carousel/slick/slick.min.js"
+        ]
       },
       "configurations": {
         "production": {
