--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@angular/platform-browser": "~16.2.0",
     "@angular/platform-browser-dynamic": "~16.2.0",
     "@angular/router": "~16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@nx/angular": "16.9.1",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jquery": "^3.7.1",
     "mongoose": "^7.5.3",
+    "ngx-perfect-scrollbar": "^10.1.1",
+    "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zone.js": "~0.13.0"
