--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/jquery": "^3.5.27",
     "@types/mongoose": "^5.11.97",
     "@types/node": "~18.7.1",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "~8.46.0",
